# serializer version: 1
# name: test_integration_test_no_results
  ''
# ---
# name: test_integration_test_vimgrep_mode
  '''
  file4.js:1:0:// This is a second updated example JavaScript file
  file4.md:1:0:// This is a second updated example JavaScript file
  
  '''
# ---
# name: test_integration_test_without_color
  '''
  file4.js:1:// This is a second updated example JavaScript file
  file4.md:1:// This is a second updated example JavaScript file
  
  '''
# ---
# name: test_reverse_ordering[default]
  '''
  hello.txt:1:foo
  hello.txt:2:a context line
  hello.txt:3:baz
  foobar.py:1:def hello():
  foobar.py:2:    print('world')
  
  '''
# ---
# name: test_reverse_ordering[reversed]
  '''
  foobar.py:1:def hello():
  foobar.py:2:    print('world')
  hello.txt:1:foo
  hello.txt:2:a context line
  hello.txt:3:baz
  
  '''
# ---
# name: test_server_is_not_running_error[/another/path/to/repo2]
  '''
  The SeaGOAT server is not running. Please start the server using the following command: seagoat-server start /another/path/to/repo2
  
  '''
# ---
# name: test_server_is_not_running_error[/path/to/repo1]
  '''
  The SeaGOAT server is not running. Please start the server using the following command: seagoat-server start /path/to/repo1
  
  '''
# ---
